[gd_scene load_steps=20 format=2]

[ext_resource path="res://textures/particles/J8PL2ps.png" type="Texture" id=1]
[ext_resource path="res://textures/particles/VXgkg8o.png" type="Texture" id=2]
[ext_resource path="res://scripts/entities/Fire.gd" type="Script" id=3]


[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.87451, 0.686275, 0.462745, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="GradientTexture" id=2]

[sub_resource type="Curve" id=3]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="Curve" id=5]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 0.2
flag_align_y = true
flag_rotate_y = true
gravity = Vector3( 0, 5, 0 )
angular_velocity = 10.0
angular_velocity_random = 1.0
linear_accel = 0.5
linear_accel_curve = SubResource( 4 )
angle_random = 1.0
scale = 3.0
scale_random = 0.14
scale_curve = SubResource( 6 )
color_ramp = SubResource( 2 )

[sub_resource type="QuadMesh" id=8]

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.160784, 0.160784, 0.160784, 1 )
albedo_texture = ExtResource( 1 )

[sub_resource type="Curve" id=10]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 0.311364 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
emission_shape = 1
emission_sphere_radius = 0.2
gravity = Vector3( 0, 5, 0 )
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 11 )
linear_accel_curve = SubResource( 4 )
radial_accel = 1.0
angle = 360.0
angle_random = 1.0
scale = 3.0
scale_curve = SubResource( 13 )
color_ramp = SubResource( 2 )

[sub_resource type="QuadMesh" id=15]

[sub_resource type="CapsuleShape" id=16]
height = 2.0

[node name="Fire" type="Spatial"]
script = ExtResource( 3 )
properties = {

}

[node name="Fire" type="Particles" parent="."]
material_override = SubResource( 1 )
amount = 6
lifetime = 1.25
visibility_aabb = AABB( -4, -3.83416, -4, 8, 7.66832, 8 )
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 8 )

[node name="Smoke" type="Particles" parent="."]
material_override = SubResource( 9 )
amount = 3
lifetime = 1.5
explosiveness = 0.1
randomness = 1.0
visibility_aabb = AABB( -4, -3.83416, -4, 8, 7.66832, 8 )
process_material = SubResource( 14 )
draw_pass_1 = SubResource( 15 )

[node name="OmniLight" type="OmniLight" parent="."]
light_color = Color( 1, 0.65098, 0.247059, 1 )
light_energy = 3.0

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.75, 0 )
shape = SubResource( 16 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
